--- a/index.htm
+++ b/index.htm
@@ -20,14 +20,14 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="author" content="DSX,工科男表白,浪漫表白,表白网站">
 	<meta name="description" content="这是XXX为XXX表白制作的表白网站">
-	<title>XXX LOVE XXX</title>
+	<title>Anh LOVE Bé</title>
 	<link rel="stylesheet" href="all.min.css" >
 </head>
 <body>
 	<div class="flowtime">
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
-				<p class="text1"><span id="text-75" contenteditable="true">Code lỏ</span> ❤ <span id="text-76" contenteditable="true">Bé Data</span> <span id="text-77" contenteditable="true">一生一世</span></p>
+				<p class="text1"><span id="text-75" contenteditable="true">Code lỏ</span> ❤ <span id="text-76" contenteditable="true">Bé Data</span> <span id="text-77" contenteditable="true">Nhiều Nhiều</span></p>
 				<p class="text2">Nhấn phím "↓" <span id="text-78" contenteditable="true">Bắt đầu nghe lời tỏ tình lãng mạn của Code lỏ.</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
