--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,7 @@
 	<meta name="description" content="这是XXX为XXX表白制作的表白网站">
 	<title>Anh thương Bé</title>
 	<link rel="stylesheet" href="all.min.css" >
+	<link rel="icon" href="./img/logo.ico" type="image/x-icon">
 </head>
 <body>
 	<div class="flowtime">
