Update text content in index.htm

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
 				<p class="text1"><span id="text-75" contenteditable="true">Anh</span> ❤ <span id="text-76" contenteditable="true">Bé</span> <span id="text-77" contenteditable="true">Nhiều Nhiều</span></p>
-				<p class="text2">Nhấn phím "↓" <span id="text-78" contenteditable="true">Bắt đầu nghe lời tỏ tình lãng mạn của Anh.</span></p>
+				<p class="text2">Nhấn phím "↓" <span id="text-78" contenteditable="true">Bắt đầu nghe lời tỏ tình lãng mạn của Anh. (Mở nhạc ở góc phải màn hình)</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
 				<p class="top-text" style="margin-bottom: 10px;" id="text-1"  contenteditable="true" >Quá khử của Anh luôn sống một mình, tận hưởng sự cô đơn, và cũng mong đợi tình yêu thực sự.</p>
