Update author and description meta tags in index.htm

--- a/index.htm
+++ b/index.htm
@@ -18,9 +18,9 @@
 	<meta http-equiv='Pragma' content='no-cache' />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="author" content="DSX,工科男表白,浪漫表白,表白网站">
-	<meta name="description" content="这是XXX为XXX表白制作的表白网站">
-	<title>Anh thương Bé</title>
+	<meta name="author" content="phuonglk">
+	<meta name="description" content="Anh Code lỏ thương Bé Data">
+	<title>My Love</title>
 	<link rel="stylesheet" href="all.min.css" >
 	<link rel="icon" href="./img/logo.ico" type="image/x-icon">
 </head>
@@ -29,37 +29,37 @@
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
 				<p class="text1"><span id="text-75" contenteditable="true">Anh</span> ❤ <span id="text-76" contenteditable="true">Bé</span> <span id="text-77" contenteditable="true">Nhiều Nhiều</span></p>
-				<p class="text2">Nhấn phím "↓" <span id="text-78" contenteditable="true">Bắt đầu nghe lời tỏ tình lãng mạn của Anh. (Mở nhạc ở góc phải màn hình)</span></p>
+				<p class="text2">Nhấn phím "↓" <span id="text-78" contenteditable="true">Bắt đầu nghe lời tỏ tình lãng mạn của Anh.</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
 				<p class="top-text" style="margin-bottom: 10px;" id="text-1"  contenteditable="true" >Quá khử của Anh luôn sống một mình, tận hưởng sự cô đơn, và cũng mong đợi tình yêu thực sự.</p>
-				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="过去的XX一直是一个人生活，享受着孤独，也憧憬着爱情。" />
+				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="" />
 			</div>
 			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
 				<h2 class="text" id="text-2" contenteditable="true">Một mình ở hành lang cô đơn.</h2>
-				<img src="img/iali35.jpg" tppabs="img/iali35.jpg"  alt="一个人的长廊"/>
+				<img src="img/iali35.jpg" tppabs="img/iali35.jpg"  alt=""/>
 			</div>
 			<div id="/section-1/page-4" class="ft-page page-4 full-img" data-id="page-4">
 				<h2 class="center-text" id="text-3" contenteditable="true">Một mình trên ngọn đồi cô đơn.</h2>
-				<img src="img/iali6.jpg" tppabs="img/iali6.jpg"  alt="一个人的山岗" />
+				<img src="img/iali6.jpg" tppabs="img/iali6.jpg"  alt="" />
 			</div>
 		</div>
 		<div class="ft-section section-2" data-id="section-2">
 			<div id="/section-2/page-1" class="ft-page page-5 full-img" data-id="page-1">
 				<h2 class="center-text" id="text-4" contenteditable="true">Một mình trên xe bus.</h2>
-				<img src="img/iali19.jpg" tppabs="img/iali19.jpg"  alt="一个人的地铁" />
+				<img src="img/iali19.jpg" tppabs="img/iali19.jpg"  alt="" />
 			</div>
 			<div id="/section-2/page-2" class="ft-page page-6" data-id="page-2">
 				<h2 class="center-text" id="text-5" contenteditable="true">Một mình tại công viên.</h2>
-				<img src="img/iali29.jpg" tppabs="img/iali29.jpg" alt="一个人的游乐场"/>
+				<img src="img/iali29.jpg" tppabs="img/iali29.jpg" alt=""/>
 			</div>
 			<div id="/section-2/page-3" class="ft-page page-7" data-id="page-3">
 				<h3 id="text-6" contenteditable="true">Nhưng Anh vẫn lạc quan, mỉm cười và vượt qua.</h3>
-				<img src="img/iali60.jpg" tppabs="img/iali60.jpg"  alt="但他依然乐观，微笑着，等待着"/>
+				<img src="img/iali60.jpg" tppabs="img/iali60.jpg"  alt=""/>
 			</div>
 			<div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
 				<h3 id="text-7" contenteditable="true">Cuộc sống không thể tránh khỏi những sóng gió.</h3>
-				<img src="img/iali51.jpg" tppabs="img/iali51.jpg" alt="生活难免有风风雨雨" />
+				<img src="img/iali51.jpg" tppabs="img/iali51.jpg" alt="" />
 			</div>
 			<div id="/section-2/page-5" class="ft-page page-9" data-id="page-5">
 				<h3 id="text-8" contenteditable="true">Anh luôn đối mặt với mọi thử thách.</h3>
@@ -80,7 +80,7 @@
 				<img src="img/iali25.jpg" tppabs="img/iali25.jpg" />
 			</div>
 			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
-				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='可是小明的爱情又在哪里呢？' />
+				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='' />
 				<h3 id="text-13" contenteditable="true">Nhưng tình yêu thực sự của Anh lại ở đâu.</h3>
 			</div>
 			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
@@ -301,16 +301,20 @@
 		</div>
 		
 	</div>
-	<div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div>
+	<div class="nojavascript">Anh thương Bé <3</div>
 	
 
-	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
+	<!-- <audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio> -->
 
+	<audio style="display: none;" controls autoplay loop>
+		<source src="lovebgm.mp3" type="audio/mp3">
+		Your browser does not support the audio element.
+	</audio>
 	
 	<script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 	<script src="all.min.js" ></script>
 	<script src="love.min.js" ></script>
-	<div class="mPower"><span id="on" title="点击暂停" style=""></span><span id="off" title="点击播放"  style=""></span></div>
+	<div class="mPower"><span id="on" title="MyLove" style=""></span><span id="off" title="MyLove"  style=""></span></div>
 
 	
 </body>
