--- a/index.htm
+++ b/index.htm
@@ -304,12 +304,12 @@
 	<div class="nojavascript">Anh thương Bé <3</div>
 	
 
-	<!-- <audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio> -->
+	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
 
-	<audio style="display: none;" controls autoplay loop>
+	<!-- <audio style="display: none;" controls autoplay loop>
 		<source src="lovebgm.mp3" type="audio/mp3">
 		Your browser does not support the audio element.
-	</audio>
+	</audio> -->
 	
 	<script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 	<script src="all.min.js" ></script>
